# shopify-mcp-server

./: Dockerfile  LICENSE  README.md  hello.py  pyproject.toml  smithery.yaml
src/shopify_mcp_server/: __init__.py  server.py
